Add file api to handle file uploads and downloads.
Add file api to handle file uploads and downloads. Rename DTO to Response. Add file extension validation Book model add cover image relative uri column. Create different Auditables for Review and Book.