@@ -1,7 +1,7 @@
 package com.example.demo.service;
 
-import com.example.demo.dto.AuthorDTO;
-import com.example.demo.dto.AuthorDTOMapper;
+import com.example.demo.dto.AuthorResponse;
+import com.example.demo.dto.AuthorResponseMapper;
 import com.example.demo.dto.AuthorRequest;
 import com.example.demo.exception.AuthorService404Exception;
 import com.example.demo.model.Author;
@@ -16,7 +16,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -25,10 +24,10 @@ public class AuthorService {
     @Autowired
     private AuthorRepository authorRepository;
     @Autowired
-    private AuthorDTOMapper authorDTOMapper;
+    private AuthorResponseMapper authorResponseMapper;
     @Autowired
     private BookRepository bookRepository;
-    public AuthorDTO saveAuthor(AuthorRequest authorRequest) {
+    public AuthorResponse saveAuthor(AuthorRequest authorRequest) {
         List<Long> bookIds = (authorRequest.bookIds() != null) ? authorRequest.bookIds() : new ArrayList<>();
         Author author = new Author(
                 authorRequest.fullName(),
@@ -37,39 +36,39 @@ public class AuthorService {
                                 .findById(bookId)
                                 .orElseThrow(() -> new AuthorService404Exception("Book with given Id " + bookId + " not found."))
                         )
-                        .toList()
+                        .collect(Collectors.toList())
         );
-        return authorDTOMapper.apply(authorRepository.save(author));
+        return authorResponseMapper.apply(authorRepository.save(author));
     }
 
-    public List<AuthorDTO> getAllAuthors() {
-        return authorRepository.findAll().stream().map(authorDTOMapper).toList();
+    public List<AuthorResponse> getAllAuthors() {
+        return authorRepository.findAll().stream().map(authorResponseMapper).collect(Collectors.toList());
     }
 
-    public List<AuthorDTO> getAllAuthors(Integer page, Integer size) {
+    public List<AuthorResponse> getAllAuthors(Integer page, Integer size) {
         Pageable pageable = PageRequest.of(page, size);
-        return authorRepository.findAll(pageable).stream().map(authorDTOMapper).toList();
+        return authorRepository.findAll(pageable).stream().map(authorResponseMapper).collect(Collectors.toList());
     }
 
-    public List<AuthorDTO> getAllAuthors(String sort, Boolean desc) {
+    public List<AuthorResponse> getAllAuthors(String sort, Boolean desc) {
         Sort sortable = Sort.by(desc ? Sort.Direction.DESC : Sort.Direction.ASC, sort);
-        return authorRepository.findAll(sortable).stream().map(authorDTOMapper).toList();
+        return authorRepository.findAll(sortable).stream().map(authorResponseMapper).collect(Collectors.toList());
     }
 
-    public List<AuthorDTO> getAllAuthors(Integer page, Integer size, String sort, Boolean desc) {
+    public List<AuthorResponse> getAllAuthors(Integer page, Integer size, String sort, Boolean desc) {
         Pageable pageable = PageRequest.of(page, size,
                 Sort.by(desc ? Sort.Direction.DESC : Sort.Direction.ASC, sort));
-        return authorRepository.findAll(pageable).stream().map(authorDTOMapper).toList();
+        return authorRepository.findAll(pageable).stream().map(authorResponseMapper).collect(Collectors.toList());
     }
 
-    public AuthorDTO getOneAuthor(Long authorId) {
+    public AuthorResponse getOneAuthor(Long authorId) {
         return authorRepository
                 .findById(authorId)
-                .map(authorDTOMapper)
+                .map(authorResponseMapper)
                 .orElseThrow(() -> new AuthorService404Exception("Author with give id " + authorId + " not found."));
     }
 
-    public AuthorDTO updateOneAuthor(Long authorId, AuthorRequest authorRequest) {
+    public AuthorResponse updateOneAuthor(Long authorId, AuthorRequest authorRequest) {
         Author author = authorRepository
                 .findById(authorId)
                 .orElseThrow(() -> new AuthorService404Exception("Author with give id " + authorId + " not found."));
@@ -81,9 +80,9 @@ public class AuthorService {
                     .map(bookId -> bookRepository
                         .findById(bookId)
                         .orElseThrow(() -> new AuthorService404Exception("Book with given Id " + bookId + " not found.")))
-                    .toList();
+                    .collect(Collectors.toList());
         author.setBooks(books);
-        return authorDTOMapper.apply(authorRepository.save(author));
+        return authorResponseMapper.apply(authorRepository.save(author));
     }
 
     public void deleteOneAuthor(Long authorId) {
