@@ -1,7 +1,7 @@
 package com.example.demo.service;
 
-import com.example.demo.dto.BookDTO;
-import com.example.demo.dto.BookDTOMapper;
+import com.example.demo.dto.BookResponse;
+import com.example.demo.dto.BookResponseMapper;
 import com.example.demo.dto.BookRequest;
 import com.example.demo.exception.AuthorService404Exception;
 import com.example.demo.exception.BookService404Exception;
@@ -10,7 +10,6 @@ import com.example.demo.model.Book;
 import com.example.demo.repository.AuthorRepository;
 import com.example.demo.repository.BookRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
@@ -28,8 +27,9 @@ public class BookService {
     @Autowired
     private AuthorRepository authorRepository;
     @Autowired
-    private BookDTOMapper bookDTOMapper;
-    public BookDTO addOneBook(BookRequest bookRequest) {
+    private BookResponseMapper bookResponseMapper;
+    public BookResponse addOneBook(BookRequest bookRequest) {
+
         List<Long> authorIds = (bookRequest.authorIds() != null) ? bookRequest.authorIds() : new ArrayList<>();
         Book book = new Book(
                 bookRequest.title(),
@@ -37,48 +37,49 @@ public class BookService {
                 authorIds.stream().map(authorId -> authorRepository
                             .findById(authorId)
                             .orElseThrow(() -> new BookService404Exception("Author with given id " + authorId + " not found."))
-                ).toList()
+                ).collect(Collectors.toList()),
+                bookRequest.coverImageRelativeUri()
         );
-        return bookDTOMapper.apply(bookRepository.save(book));
+        return bookResponseMapper.apply(bookRepository.save(book));
     }
 
-    public List<BookDTO> getAllBooks() {
+    public List<BookResponse> getAllBooks() {
         return bookRepository.findAll()
                 .stream()
-                .map(bookDTOMapper)
-                .toList();
+                .map(bookResponseMapper)
+                .collect(Collectors.toList());
     }
 
-    public List<BookDTO> getAllBooks(Integer page, Integer size) {
+    public List<BookResponse> getAllBooks(Integer page, Integer size) {
         Pageable pageable = PageRequest.of(page, size);
         return bookRepository.findAll(pageable)
                 .stream()
-                .map(bookDTOMapper)
-                .toList();
+                .map(bookResponseMapper)
+                .collect(Collectors.toList());
     }
 
-    public List<BookDTO> getAllBooks(String sort, Boolean desc) {
+    public List<BookResponse> getAllBooks(String sort, Boolean desc) {
         Sort sortable = Sort.by(desc ? Sort.Direction.DESC : Sort.Direction.ASC, sort);
         return bookRepository.findAll(sortable)
                 .stream()
-                .map(bookDTOMapper)
-                .toList();
+                .map(bookResponseMapper)
+                .collect(Collectors.toList());
     }
 
-    public List<BookDTO> getAllBooks(Integer page, Integer size, String sort, Boolean desc) {
+    public List<BookResponse> getAllBooks(Integer page, Integer size, String sort, Boolean desc) {
         Pageable pageable = PageRequest.of(page, size, Sort.by(desc ? Sort.Direction.DESC : Sort.Direction.ASC, sort));
         return bookRepository.findAll()
                 .stream()
-                .map(bookDTOMapper)
-                .toList();
+                .map(bookResponseMapper)
+                .collect(Collectors.toList());
     }
-    public BookDTO getOneBook(Long bookId) throws BookService404Exception {
+    public BookResponse getOneBook(Long bookId) throws BookService404Exception {
         return bookRepository.findById(bookId)
-                .map(bookDTOMapper)
+                .map(bookResponseMapper)
                 .orElseThrow(() -> new BookService404Exception("Book with given id " + bookId + " not found."));
     }
 
-    public BookDTO updateOneBook(Long bookId, BookRequest bookRequest) {
+    public BookResponse updateOneBook(Long bookId, BookRequest bookRequest) {
         Book book = bookRepository.findById(bookId)
                 .orElseThrow(() -> new BookService404Exception("Book with given id " + bookId + " not found."));
 
@@ -91,7 +92,8 @@ public class BookService {
         book.setTitle(bookRequest.title());
         book.setDescription(bookRequest.description());
         book.setAuthors(authors);
-        return bookDTOMapper.apply(bookRepository.save(book));
+        book.setCoverImageRelativeUri(bookRequest.coverImageRelativeUri());
+        return bookResponseMapper.apply(bookRepository.save(book));
     }
 
     public void deleteOneBook(Long bookId) {
